@@ -36,7 +36,6 @@ public:
   ~FrameMapping();
 
   bool init();
-  void bind();
 
   ShProgram vertex() { return vsh;}
   ShProgram fragment() { return fsh;}
@@ -265,14 +264,6 @@ bool FrameMapping::init()
   return true;
 }
 
-void FrameMapping::bind()
-{
-  vsh->code()->print(std::cerr);
-  fsh->code()->print(std::cerr);
-  std::cerr << "Binding " << name() << std::endl;
-  shBindShader(vsh);
-  shBindShader(fsh);
-}
 
 FrameMapping ash;
 }
