@@ -17,7 +17,6 @@ public:
   ~LuciteShader();
 
   bool init();
-  void bind();
 
   ShProgram vertex() { return vsh;}
   ShProgram fragment() { return fsh;}
@@ -102,13 +101,5 @@ bool LuciteShader::init()
   return true;
 }
 
-void LuciteShader::bind()
-{
-  vsh->code()->print(std::cerr);
-  fsh->code()->print(std::cerr);
-  std::cerr << "Binding " << name() << std::endl;
-  shBindShader(vsh);
-  shBindShader(fsh);
-}
 
 LuciteShader the_lucite_shader;
