@@ -17,7 +17,6 @@ public:
   ~ShinyBumpMapShader();
 
   bool init();
-  void bind();
 
   ShProgram vertex() { return vsh;}
   ShProgram fragment() { return fsh;}
@@ -102,13 +101,5 @@ bool ShinyBumpMapShader::init()
   return true;
 }
 
-void ShinyBumpMapShader::bind()
-{
-  vsh->code()->print(std::cerr);
-  fsh->code()->print(std::cerr);
-  std::cerr << "Binding " << name() << std::endl;
-  shBindShader(vsh);
-  shBindShader(fsh);
-}
 
 ShinyBumpMapShader the_shinybumpmap_shader;
