@@ -13,7 +13,6 @@ public:
   ~WobbleShader();
 
   bool init();
-  void bind();
 
   ShProgram vertex() { return vsh;}
   ShProgram fragment() { return fsh;}
@@ -57,15 +56,6 @@ bool WobbleShader::init()
   ShConstColor3f lightColor(1.0f, 1.0f, 1.0f);
   fsh = ShKernelSurface::diffuse<ShColor3f>() << diffuse << lightColor;
   return true;
-}
-
-void WobbleShader::bind()
-{
-  vsh->code()->print(std::cerr);
-  fsh->code()->print(std::cerr);
-  std::cerr << "Binding " << name() << std::endl;
-  shBindShader(vsh);
-  shBindShader(fsh);
 }
 
 WobbleShader the_wobble_shader;
